# neural-gfca

./: README.md  pyproject.toml
neural_gfca/: functional.py  nn.py  separate.py
neural_gfca/bf/: mvdr.py
neural_gfca/callbacks/: psd_visualizer.py  xt_visualizer.py
neural_gfca/datamodules/: ordered_multi_datamodule.py
neural_gfca/datasets/: hdf5_wavact_dataset.py  hdf5_wavactsrc_dataset.py
neural_gfca/decoders/: res_lin_decoder.py
neural_gfca/diagonalizers/: iss_nrmxt_zhang3_cnt_diagonalizer.py  iss_nrmxt_zhang3_cnt_fblk_diagonalizer.py
neural_gfca/encoders/: resepformer.py  resepformer_encoder.py  resepformer_preit_encoder.py
neural_gfca/tasks/: universal_scl2_wsrc_task.py
neural_gfca/utils/: distributions.py  envelope_variance_scoring.py  separator.py
recipes/chime8/scripts/: 1-convert_chime8_dasr.py  1-convert_notsofar1_sim.py  2-dereverberate.py  3-make_dataset_chime8_dasr.py  3-make_dataset_notsofar1-sim.py
